...
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/barcode_scan_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/barcode_scan_icon"
                    android:contentDescription="scan barcode button"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                android:id="@+id/remove_image_button"
                android:clickable="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|top"
                android:layout_marginEnd="16dp"
                android:src="@drawable/remove_image_icon" />
...
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="14dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/open_gallery_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/dark_green"
...
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="14dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/open_camera_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/light_grey"
...
                    android:text="Item Name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:gravity="center_horizontal" />

                <EditText
                    android:id="@+id/item_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:hint="e.g. kitchen"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
...
